force-app/main/default/objects/Certification_Process_Setup__c/Certification_Process_Setup__c.object-meta.xml
<CustomObject>
    <label>Competency Process Setup</label>
    <nameField>
        <label>Competency Process Setup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competency Process Setups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>