force-app/main/default/objects/Certification_Process_Setup__c/fields/Allow_Automation_Level__c.field-meta.xml
<CustomField>
    <fullName>Allow_Automation_Level__c</fullName>
    <description>Required if Automate Competency is &quot;Y&quot;</description>
    <inlineHelpText>Required if Automate Competency is &quot;Y&quot;</inlineHelpText>
    <label>Allow Automation Level</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Automate_Certification__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Registered to Preferred</fullName>
            </value>
            <value>
                <fullName>Registered to Premier</fullName>
            </value>
            <value>
                <fullName>Preferred to Premier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>