force-app/main/default/objects/Certification_Process_Setup__c/fields/Automate_Certification__c.field-meta.xml
<CustomField>
    <fullName>Automate_Certification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to automate Competency</description>
    <inlineHelpText>Check to automate Competency</inlineHelpText>
    <label>Automate Competency</label>
    <type>Checkbox</type>
</CustomField>