force-app/main/default/objects/Certification_Process_Setup__c/fields/Duplicate_Region__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Region__c</fullName>
    <label>Duplicate Region</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>