force-app/main/default/objects/Certification_Process_Setup__c/fields/Send_Email_to_Partner_Admin__c.field-meta.xml
<CustomField>
    <fullName>Send_Email_to_Partner_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to send email to partner admin</description>
    <inlineHelpText>Check to send email to partner admin</inlineHelpText>
    <label>Send Email to Partner Admin</label>
    <type>Checkbox</type>
</CustomField>