force-app/main/default/objects/Certification_Process_Setup__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Region__c</columns>
    <columns>Automate_Certification__c</columns>
    <columns>Allow_Automation_Level__c</columns>
    <columns>Certification_Admin_Mailbox__c</columns>
    <columns>Send_Email_to_Partner_Admin__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>